# chunkr

./: .codespellrc  .dockerignore  .env.chunkmydocs  .env.docker-compose  .env.example  .env.pyscripts  .eslintrc.js  .gitignore  .llm_providers.example.yaml  .llm_providers.yaml  .npmrc  .release-please-config-enterprise.json  .release-please-config.json  .release-please-manifest-enterprise.json  .release-please-manifest.json  CHANGELOG-ENTERPRISE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTENT-MIGRATION-GUIDE  LICENSE  README.md  SYNC.md  THIRD-PARTY-NOTICES.md  build_and_push_to_acr.sh  build_dockers.sh  compose-cpu-copy.yaml  compose-cpu-mac-silicon.yaml  compose-cpu.yaml  compose-enterprise.yaml  compose-mac.yaml  compose.cpu.yaml  compose.dev.yaml  compose.mac.yaml  compose.sophris.yaml  compose.yaml  compose.yml  docker-compose.yml  doppler.yaml  finalize.py  git.sh  (+17 more)
chunkmydocs/: .env.example  .gitignore  Cargo.toml  README.md  cmd.txt  diesel 2.toml  payload.json  response.json  table_test.py  ui_table_test.py
chunkmydocs/.cargo/: config.toml
chunkmydocs/migrations/2024-08-25-043249_create-tables/: down.sql  up.sql
chunkmydocs/migrations/2024-08-25-203508_adding-ingestion-tables/: down.sql  up.sql
chunkmydocs/migrations/2024-09-02-200947_create-database/: down.sql  up.sql
chunkmydocs/migrations/2024-09-02-201016_create-tables/: up.sql
chunkmydocs/migrations/2024-09-02-201241_create-task/: down.sql  up.sql
chunkmydocs/migrations/2024-09-06-214844_payments/: up.sql
chunkmydocs/migrations/2024-09-12-222112_task-indexes/: down.sql  up.sql
chunkmydocs/migrations/2024-09-13-192321_set_default_values_usage_types/: down.sql  up.sql
chunkmydocs/migrations/2024-09-16-215745_invoice_status/: down.sql  up.sql
chunkmydocs/migrations/2024-09-17-205403_invoices/: down.sql  up.sql
chunkmydocs/migrations/2024-09-18-020537_alter_discounts/: down.sql  up.sql
chunkmydocs/migrations/2024-09-18-184809_stripe_invoice_id/: down.sql  up.sql
chunkmydocs/migrations/2024-09-18-220143_monthly_usage/: down.sql  up.sql
chunkmydocs/migrations/2024-09-19-232037_task_count/: down.sql  up.sql
chunkmydocs/migrations/2024-09-23-225754_image-location/: down.sql
chunkmydocs/migrations/2024-10-01-205650_llm/: up.sql
chunkmydocs/migrations/2024-10-04-222604_update_validate_usage/: up.sql
chunkmydocs/migrations/2024-10-04-231524_task_table_new_cols/: up.sql
chunkmydocs/migrations/2024-10-24-235044_pre_applied_free_pages/: down.sql  up.sql
chunkmydocs/migrations/2024-11-08-202313_new_update_usage/: down.sql  up.sql
chunkmydocs/migrations/2024-11-08-205804_add_primary_key_to_pre_applied_free_pages/: down.sql  up.sql
chunkmydocs/migrations/2024-11-08-210951_combined_update_usage/: down.sql  up.sql
chunkmydocs/migrations/2024-11-08-211915_update_validate_usage/: down.sql  up.sql
chunkmydocs/src/: lib.rs
chunkmydocs/src/data/: schema.rs
chunkmydocs/src/extraction/: extraction_config.rs  grobid.rs  llm.rs  mod.rs  pdf2png.rs  pdla.rs  table_ocr.rs
chunkmydocs/src/jobs/: init.rs
chunkmydocs/src/middleware/: api_key.rs  auth.rs  mod.rs
chunkmydocs/src/models/: mod.rs
chunkmydocs/src/prompts/: structured_extraction.txt  table.txt
chunkmydocs/src/routes/: auth.rs  github.rs  health.rs  mod.rs  stripe.rs  task.rs  tasks.rs  usage.rs  user.rs
chunkmydocs/src/task/: grobid.rs  llm.rs  mod.rs  pdf.rs  pdf2png.rs  pdla.rs  process.rs
chunkmydocs/src/utils/: mod.rs  rate_limit.rs
chunkmydocs/src/workers/: fast.rs  high_quality.rs  invoicer.rs  ocr.rs  postprocess.rs  preprocess.rs  structured_extraction.rs  task_processor.rs
clients/python-client/: .gitignore  CHANGELOG-ENTERPRISE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
clients/python-client/tests/: README.md  bbox_visualizer.py  main.py  test_chunkr.py  test_excel.py  test_file_handling.py  test_pages.py
clients/rust/: .gitignore  Cargo.toml  README.md  cmd.sh
clients/rust/.openapi-generator/: FILES
clients/rust/docs/: AutoGenerationConfig.md  AutoGenerationConfigCropImage.md  AutoGenerationConfigHtml.md  BoundingBox.md  Chunk.md  (+41 more)
core/: .env.example  .gitignore  .llm_providers.yaml  CHANGELOG-ENTERPRISE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  heaptrack.task.383141.zst  models.example.yaml
core/migrations/: .gitkeep
core/src/: lib.rs  main.rs
extraction/: .env.dist  .env.example  Cargo.toml  build.rs
extraction/src/: lib.rs  main.rs
pyscripts/: annotate.py  api.py  download.py  hello.py  main.py  mkd.py  models.py  pyproject.toml  requirements.txt  sample.py  test_pdla.py  throughput.py
scripts/: frontend_pdfs.py  legends.py  pyproject.toml  table_test.py
scripts/processors/: chunkr.py  pdf_queue.py
services/analytics/: .env.example  Cargo.toml  test.sh
services/doctr/: README.md  download_models.py  main.py  pyproject.toml  requirements.txt  run.py  tests.py
services/ocr/: README.md  cmds.sh  main.py  pyproject.toml
services/rapidocr/: README.md  load_balancer.py  main.py  ocr_aggregate_results.csv  ocr_log.csv  pyproject.toml
services/table-ocr/: .gitignore  __init__.py  config.py  example.py  main.py  ocr_service.py  pyproject.toml  table_data.json  utils.py
services/table_ocr/: .dockerignore  .gitignore  Dockerfile  cmds.sh  main.py  model.py  model_config.py  ocr.py  ocr_service.py  pyproject.toml  requirements.txt  utils.py
services/task/: .dockerignore  .env.example  Dockerfile  README.md  bentofile.yaml  cmds.sh  converters.py  docker.sh  download_models.py  main.py  models.py  ocr.py  pyproject.toml  service.py  utils.py
services/tests/: .gitignore  README.md  create_grid.py  create_word_grid.py  download_models.py  hit_server.py  hit_vgt_server.py  pyproject.toml
services/unitable/: .gitignore  CONFIG.mk  LICENSE  Makefile  README.md  hello.py  main.py  pipe.py  pyproject.toml  requirements.txt  setup.py  testing.py
services/vgt/: Dockerfile  README.md  configuration.py  download_models.py  pyproject.toml  requirements.txt
services/yolo/: README.md  download_model.py  main.py  models.py  prediction.py  pyproject.toml
(+1976 files in other folders)
