[package]
name = "chunkmydocs"
version = "0.0.0"
edition = "2021"
default-run = "chunkmydocs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.68"
dotenvy = "=0.15.7"
config = "0.14.0"
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4", "v5"] }
actix-web = "4.8.0"
pdf = "0.9.0"
lopdf = "0.33.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
actix-multipart = "0.7.2"
tempfile = "3.10.1"
quick-xml = "0.36.1"
futures-util = "0.3.30"
env_logger = "0.11.5"
tempdir = "0.3.7"
humantime = "2.1.0"
humantime-serde = "1.1.1"
postgres-types = { version = "0.2.7", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
bytes = "1.4.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
deadpool-redis = { version = "0.16.0", features = ["serde"] }
image = "0.25.2"
poppler = "0.5.1"

[[bin]]
name = "task-processor"
path = "src/workers/task_processor.rs"
