[package]
name = "chunkr-ai"
version = "1.0.0"
authors = ["ishaan@lumina.sh"]
description = "API service for document layout analysis and chunking to convert document into RAG/LLM-ready data."
license = ""
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
