[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
futures = "0.3"
futures-util = "0.3"
log = "0.4.22"
