[project]
name = "ocr"
version = "0.1.0"
description = "PaddleOCR server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
    "python-dotenv>=1.0.1",
    "paddleocr>=2.8.1",
    "opencv-python>=4.10.0.84",
    "setuptools>=75.1.0",
    "python-multipart>=0.0.12",
]

