[project]
name = "table-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.115.2",
    "pillow>=10.4.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "requests>=2.32.3",
    "transformers>=4.45.2",
    "uvicorn>=0.31.1",
]
