[project]
name = "task"
version = "0.1.0"
description = "Run tasks on documents on either cpu or gpu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autocorrect>=2.6.1",
    "beautifulsoup4>=4.12.3",
    "bentoml>=1.3.5",
    "fuzzywuzzy>=0.18.0",
    "more-itertools>=10.5.0",
    "opencv-python>=4.10.0.84",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.1",
    "pyenchant>=3.2.2",
    "requests>=2.32.3",
    "torch>=2.4.1",
    "transformers>=4.44.2",
]

[project.optional-dependencies]
linux = ["paddlepaddle-gpu>=2.6.2"]
macos = ["paddlepaddle>=2.6.2"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'"
]
