[project]
name = "task"
version = "0.1.0"
description = "Run tasks on documents on either cpu or gpu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bentoml>=1.3.5",
    "boto3>=1.35.25",
    "markdownify>=0.13.1",
    "openai>=1.50.2",
    "opencv-python>=4.10.0.84",
    "paddleocr>=2.8.1",
    "pdf2image>=1.17.0",
    "pydantic>=2.9.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.6.7",
    "torch>=2.4.1",
    "transformers>=4.44.2",
]

[project.optional-dependencies]
linux = ["paddlepaddle-gpu>=2.6.2"]
macos = ["paddlepaddle>=2.6.2"]
windows = ["paddlepaddle>=2.6.2"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'"
]
