[project]
name = "task"
version = "0.1.0"
description = "Run tasks on documents on either cpu or gpu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "amazon-textract-textractor>=1.8.3",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.25",
    "colorlog>=6.8.2",
    "fastapi>=0.115.0",
    "markdownify>=0.13.1",
    "openai>=1.50.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.1",
    "pymupdf>=1.24.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "ruff>=0.6.7",
    "uvicorn>=0.30.6",
]
