[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.5",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "tabulate>=0.9.0",
    "tokenization>=1.0.7",
    "transformers>=4.47.1",
]
