[project]
name = "vgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"  # Changed from 3.10 to 3.9
dependencies = [
    "torch==1.9.0",
    "torchvision==0.10.0",
    "timm==0.5.4", 
    "Pillow==8.4.0",
    "blobfile",
    "mypy",
    "numpy",
    "pytest", 
    "requests",
    "einops",
    "tensorboard",
    "scipy",
    "opencv-python==4.5.1.48",
    "Shapely==1.8.4",
    "detectron2"
]