[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.29",
    "fastapi>=0.115.12",
    "img2pdf>=0.6.0",
    "openai>=1.71.0",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]
